tests/snapshots/api/node0_v1_node_vid_share_by_payload_hash.snap
---
source: tests/common/api_snapshot.rs
---
V1:
  content:
    - mt_proofs: "<string>"
      payload: "<string>"
      range:
        end: "<number>"
        start: "<number>"
  index: "<number>"
  ns_commits:
    - "<string>"
  ns_lens:
    - "<number>"
