tests/snapshots/api/node0_v1_reward_state_v2_proof.snap
---
source: tests/common/api_snapshot.rs
---
balance: "<string>"
proof:
  account: "<string>"
  proof:
    Presence:
      pos: "<string>"
      proof:
        - Leaf:
            elem: "<string>"
            pos: "<string>"
            value: "<string>"
        - Branch:
            children:
              - "<string>"
              - ForgettenSubtree:
                  value: "<string>"
            value: "<string>"
        - Branch:
            children:
              - ForgettenSubtree:
                  value: "<string>"
              - "<string>"
            value: "<string>"
        - Branch:
            children:
              - ForgettenSubtree:
                  value: "<string>"
            value: "<string>"
