tests/snapshots/api/node0_v1_state_signature_block.snap
---
source: tests/common/api_snapshot.rs
---
auth_root: "<string>"
key: "<string>"
next_stake: "<string>"
signature: "<string>"
state: "<string>"
v2_signature: "<string>"
