tests/snapshots/api/node0_v1_status_metrics.snap
---
source: tests/common/api_snapshot.rs
---
- aggregator_height
- consensus_append_da_duration
- "consensus_append_da_duration_bucket{le}"
- consensus_append_da_duration_count
- consensus_append_da_duration_sum
- consensus_append_quorum_duration
- "consensus_append_quorum_duration_bucket{le}"
- consensus_append_quorum_duration_count
- consensus_append_quorum_duration_sum
- consensus_append_vid_duration
- "consensus_append_vid_duration_bucket{le}"
- consensus_append_vid_duration_count
- consensus_append_vid_duration_sum
- consensus_build_info
- "consensus_build_info{branch,debug,features,testing\",modified}"
- consensus_catchup_request_failures
- "consensus_catchup_request_failures{peer}"
- consensus_catchup_requests
- "consensus_catchup_requests{peer}"
- consensus_cdn_num_failed_messages
- consensus_cliquenet_accept_tasks
- "consensus_cliquenet_accept_tasks{peer}"
- consensus_cliquenet_channel_size
- "consensus_cliquenet_channel_size{peer}"
- consensus_cliquenet_connect_attempts
- "consensus_cliquenet_connect_attempts{peer}"
- consensus_cliquenet_connect_tasks
- "consensus_cliquenet_connect_tasks{peer}"
- consensus_cliquenet_hello_tasks
- "consensus_cliquenet_hello_tasks{peer}"
- consensus_cliquenet_hellos
- "consensus_cliquenet_hellos{peer}"
- consensus_cliquenet_outbound_messages
- "consensus_cliquenet_outbound_messages{peer}"
- consensus_cliquenet_peer_tasks
- "consensus_cliquenet_peer_tasks{peer}"
- consensus_cliquenet_remaining_budget
- "consensus_cliquenet_remaining_budget{peer}"
- consensus_cliquenet_retrying_messages
- "consensus_cliquenet_retrying_messages{peer}"
- consensus_coordinator_event_queue_len
- consensus_current_view
- consensus_decide_processor_backlog
- consensus_decide_processor_failures
- consensus_decide_processor_last_decided
- consensus_decide_processor_last_processed
- consensus_decide_processor_process_duration
- "consensus_decide_processor_process_duration_bucket{le}"
- consensus_decide_processor_process_duration_count
- consensus_decide_processor_process_duration_sum
- consensus_external_event_queue_len
- consensus_finalized_bytes
- "consensus_finalized_bytes_bucket{le}"
- consensus_finalized_bytes_count
- consensus_finalized_bytes_sum
- consensus_genesis
- "consensus_genesis{base_version,genesis_version,upgrade_version}"
- consensus_internal_append_da2_duration
- "consensus_internal_append_da2_duration_bucket{le}"
- consensus_internal_append_da2_duration_count
- consensus_internal_append_da2_duration_sum
- consensus_internal_append_da_duration
- "consensus_internal_append_da_duration_bucket{le}"
- consensus_internal_append_da_duration_count
- consensus_internal_append_da_duration_sum
- consensus_internal_append_quorum2_duration
- "consensus_internal_append_quorum2_duration_bucket{le}"
- consensus_internal_append_quorum2_duration_count
- consensus_internal_append_quorum2_duration_sum
- consensus_internal_append_vid_duration
- "consensus_internal_append_vid_duration_bucket{le}"
- consensus_internal_append_vid_duration_count
- consensus_internal_append_vid_duration_sum
- consensus_internal_event_queue_len
- consensus_internal_process_decided_events_duration
- "consensus_internal_process_decided_events_duration_bucket{le}"
- consensus_internal_process_decided_events_duration_count
- consensus_internal_process_decided_events_duration_sum
- consensus_invalid_qc
- consensus_l1_failed_requests
- "consensus_l1_failed_requests{provider}"
- consensus_l1_failovers
- consensus_l1_finalized
- consensus_l1_head
- consensus_l1_stream_reconnects
- consensus_last_decided_time
- consensus_last_decided_view
- consensus_last_synced_block_height
- consensus_last_voted_view
- consensus_libp2p_is_ready
- consensus_libp2p_num_connected_peers
- consensus_libp2p_num_failed_messages
- consensus_node
- consensus_node_identity_general
- "consensus_node_identity_general{company_name}"
- consensus_node_identity_icon
- "consensus_node_identity_icon{large_1x,large_2x,large_3x,small_1x,small_2x,small_3x}"
- consensus_node_identity_location
- "consensus_node_identity_location{country,latitude,longitude}"
- consensus_node_index
- "consensus_node{key}"
- consensus_number_of_empty_blocks_proposed
- consensus_number_of_timeouts
- consensus_number_of_timeouts_as_leader
- consensus_number_of_views_per_decide_event
- "consensus_number_of_views_per_decide_event_bucket{le}"
- consensus_number_of_views_per_decide_event_count
- consensus_number_of_views_per_decide_event_sum
- consensus_number_of_views_since_last_decide
- consensus_outstanding_transactions
- consensus_outstanding_transactions_memory_size
- consensus_previous_proposal_to_proposal_time
- "consensus_previous_proposal_to_proposal_time_bucket{le}"
- consensus_previous_proposal_to_proposal_time_count
- consensus_previous_proposal_to_proposal_time_sum
- consensus_proposal_fetcher_failed
- consensus_proposal_fetcher_fetched
- consensus_proposal_fetcher_last_fetched
- consensus_proposal_fetcher_last_seen
- consensus_proposal_fetcher_queue_len
- consensus_proposal_to_decide_time
- "consensus_proposal_to_decide_time_bucket{le}"
- consensus_proposal_to_decide_time_count
- consensus_proposal_to_decide_time_sum
- consensus_storage_append_cert2
- "consensus_storage_append_cert2_bucket{le}"
- consensus_storage_append_cert2_count
- consensus_storage_append_cert2_sum
- consensus_storage_append_da
- "consensus_storage_append_da_bucket{le}"
- consensus_storage_append_da_count
- consensus_storage_append_da_sum
- consensus_storage_append_high_qc
- "consensus_storage_append_high_qc_bucket{le}"
- consensus_storage_append_high_qc_count
- consensus_storage_append_high_qc_sum
- consensus_storage_append_proposal
- "consensus_storage_append_proposal_bucket{le}"
- consensus_storage_append_proposal_count
- consensus_storage_append_proposal_sum
- consensus_storage_append_state_cert
- "consensus_storage_append_state_cert_bucket{le}"
- consensus_storage_append_state_cert_count
- consensus_storage_append_state_cert_sum
- consensus_storage_append_vid
- "consensus_storage_append_vid_bucket{le}"
- consensus_storage_append_vid_count
- consensus_storage_append_vid_sum
- consensus_storage_record_action
- "consensus_storage_record_action_bucket{le}"
- consensus_storage_record_action_count
- consensus_storage_record_action_sum
- consensus_update_leaf_duration
- "consensus_update_leaf_duration_bucket{le}"
- consensus_update_leaf_duration_count
- consensus_update_leaf_duration_sum
- consensus_validate_and_apply_header_duration
- "consensus_validate_and_apply_header_duration_bucket{le}"
- consensus_validate_and_apply_header_duration_count
- consensus_validate_and_apply_header_duration_sum
- consensus_version
- "consensus_version{desc,rev,timestamp}"
- consensus_vid_disperse_duration
- "consensus_vid_disperse_duration_bucket{le}"
- consensus_vid_disperse_duration_count
- consensus_vid_disperse_duration_sum
- consensus_view_duration_as_leader
- "consensus_view_duration_as_leader_bucket{le}"
- consensus_view_duration_as_leader_count
- consensus_view_duration_as_leader_sum
- node_cpu_count
- process_resident_memory_bytes
- process_uptime_seconds
- process_virtual_memory_bytes
- scanner_current
- scanner_missing_blocks
- scanner_missing_vid
- scanner_running
- scanner_scanned_blocks
- scanner_scanned_vid
- sql_committed_transactions
- sql_dropped_transactions
- sql_open_transactions
- sql_reverted_transactions
- sql_transaction_duration
- "sql_transaction_duration_bucket{le}"
- sql_transaction_duration_count
- sql_transaction_duration_sum
- sync_status_avg_time_per_block_scanned
- "sync_status_avg_time_per_block_scanned_bucket{le}"
- sync_status_avg_time_per_block_scanned_count
- sync_status_avg_time_per_block_scanned_sum
- sync_status_current_range_end
- sync_status_current_range_start
- sync_status_current_range_start_time
- sync_status_range_size
- sync_status_ranges_scanned
- sync_status_running
