tests/snapshots/api/node0_ws_v1_availability_stream_payloads.snap
---
source: tests/common/api_snapshot.rs
---
- block_hash: "<masked>"
  data:
    ns_table:
      bytes: AAAAAA==
    raw_payload: ""
  hash: "<masked>"
  height: 0
  size: 0
