tests/snapshots/api/node0_ws_v1_availability_stream_transactions.snap
---
source: tests/common/api_snapshot.rs
---
- block_hash: "<string>"
  block_height: "<number>"
  hash: "<string>"
  index: "<number>"
  namespace: "<number>"
  pos_in_namespace: "<number>"
  transaction:
    namespace: "<number>"
    payload: "<string>"
