tests/snapshots/api/node1_v1_explorer_block_detail_by_hash.snap
---
source: tests/common/api_snapshot.rs
---
block_detail:
  block_reward:
    - "<string>"
  fee_recipient:
    - "<string>"
  hash: "<string>"
  height: "<number>"
  num_transactions: "<number>"
  proposer_id:
    - "<string>"
  size: "<number>"
  time: "<string>"
