tests/snapshots/api/node1_v1_explorer_blocks_latest.snap
---
source: tests/common/api_snapshot.rs
---
block_summaries:
  - hash: "<string>"
    height: "<number>"
    num_transactions: "<number>"
    proposer_id:
      - "<string>"
    size: "<number>"
    time: "<string>"
